--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
       <address class="nav-address">
         <ul class="list">
           <li>
-            <a class="address-link" href="mailto:info@devstudio.com"
+            <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -52,7 +52,7 @@
 
     <main>
       <section class="section-solution">
-        <h2 class="head1">Effective Solutions for Your Business</h2>
+        <h1 class="head1">Effective Solutions for Your Business</h1>
         <button class="solution-button text-button" type="button">
           Order Service
         </button>
@@ -91,7 +91,7 @@
           </li>
         </ul>
       </section>
-      
+
       <section>
         <h2 class="head2">What are we doing</h2>
         <ul class="list">
