--- a/portfolio.html
+++ b/portfolio.html
@@ -40,14 +40,12 @@
       <address class="nav-address">
         <ul class="list">
           <li>
-            <a class="address-link" href="mailto:info@devstudio.com"
+            <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="address-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
