--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <main>
       <section class="section-solution">
-        <h1 class="head1">Effective Solutions for Your Business</h1>
+        <h1 class="Title1">Effective Solutions for Your Business</h1>
         <button class="solution-button text-button" type="button">
           Order Service
         </button>
@@ -62,28 +62,28 @@
         <h2 hidden>Section2</h2>
         <ul class="list">
           <li>
-            <h3 class="head3">Strategy</h3>
+            <h3 class="Title3">Strategy</h3>
             <p class="list-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="head3">Punctuality</h3>
+            <h3 class="Title3">Punctuality</h3>
             <p class="list-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="head3">Diligence</h3>
+            <h3 class="Title3">Diligence</h3>
             <p class="list-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="head3">Technologies</h3>
+            <h3 class="Title3">Technologies</h3>
             <p class="list-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -93,7 +93,7 @@
       </section>
 
       <section>
-        <h2 class="head2">What are we doing</h2>
+        <h2 class="Title2">What are we doing</h2>
         <ul class="list">
           <li>
             <img src="./images/img1.jpg" alt="desktop" width="360" />
@@ -108,26 +108,26 @@
       </section>
 
       <section class="section-our-team">
-        <h2 class="head2">Our Team</h2>
+        <h2 class="Title2">Our Team</h2>
         <ul class="list">
           <li class="our-team-list">
             <img src="./images/img-foto1.jpg" alt="mark" width="264" />
-            <h3 class="head3">Mark Guerrero</h3>
+            <h3 class="Title3">Mark Guerrero</h3>
             <p class="list-text">Product Designer</p>
           </li>
           <li class="our-team-list">
             <img src="./images/img-foto2.jpg" alt="tom" width="264" />
-            <h3 class="head3">Tom Ford</h3>
+            <h3 class="Title3">Tom Ford</h3>
             <p class="list-text">Frontend Developer</p>
           </li>
           <li class="our-team-list">
             <img src="./images/img-foto3.jpg" alt="camila" width="264" />
-            <h3 class="head3">Camila Garcia</h3>
+            <h3 class="Title3">Camila Garcia</h3>
             <p class="list-text">Marketing</p>
           </li>
           <li class="our-team-list">
             <img src="./images/img-foto4.jpg" alt="daniel" width="264" />
-            <h3 class="head3">Daniel Wilson</h3>
+            <h3 class="Title3">Daniel Wilson</h3>
             <p class="list-text">UI Designer</p>
           </li>
         </ul>
