--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,7 @@
                 alt="BankingApp"
                 width="360"
               />
-              <h2 class="head3">Banking App Interface Concept</h2>
+              <h2 class="Title3">Banking App Interface Concept</h2>
               <p class="list-text">App</p>
             </a>
           </li>
@@ -98,7 +98,7 @@
                 alt="Cashless Payment"
                 width="360"
               />
-              <h2 class="head3">Cashless Payment</h2>
+              <h2 class="Title3">Cashless Payment</h2>
               <p class="list-text">Marketing</p>
             </a>
           </li>
@@ -109,7 +109,7 @@
                 alt="Meditation App"
                 width="360"
               />
-              <h2 class="head3">Meditation App</h2>
+              <h2 class="Title3">Meditation App</h2>
               <p class="list-text">App</p>
             </a>
           </li>
@@ -120,7 +120,7 @@
                 alt="Marketing"
                 width="360"
               />
-              <h2 class="head3">Taxi Service</h2>
+              <h2 class="Title3">Taxi Service</h2>
               <p class="list-text">Marketing</p>
             </a>
           </li>
@@ -131,7 +131,7 @@
                 alt="Screen Illustrations"
                 width="360"
               />
-              <h2 class="head3">Screen Illustrations</h2>
+              <h2 class="Title3">Screen Illustrations</h2>
               <p class="list-text">Design</p>
             </a>
           </li>
@@ -142,7 +142,7 @@
                 alt="Online Courses"
                 width="360"
               />
-              <h2 class="head3">Online Courses</h2>
+              <h2 class="Title3">Online Courses</h2>
               <p class="list-text">Marketing</p>
             </a>
           </li>
@@ -153,7 +153,7 @@
                 alt="Instagram Stories"
                 width="360"
               />
-              <h2 class="head3">Instagram Stories Concept</h2>
+              <h2 class="Title3">Instagram Stories Concept</h2>
               <p class="list-text">Design</p>
             </a>
           </li>
@@ -164,7 +164,7 @@
                 alt="Organic Food"
                 width="360"
               />
-              <h2 class="head3">Organic Food</h2>
+              <h2 class="Title3">Organic Food</h2>
               <p class="list-text">Web Site</p>
             </a>
           </li>
@@ -175,7 +175,7 @@
                 alt="Fresh Coffee"
                 width="360"
               />
-              <h2 class="head3">Fresh Coffee</h2>
+              <h2 class="Title3">Fresh Coffee</h2>
               <p class="list-text">Web Site</p>
             </a>
           </li>
