--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,7 @@
                 alt="BankingApp"
                 width="360"
               />
-              <h2 class="titlethird">Banking App Interface Concept</h2>
+              <h2 class="title-third">Banking App Interface Concept</h2>
               <p class="list-text">App</p>
             </a>
           </li>
@@ -98,7 +98,7 @@
                 alt="Cashless Payment"
                 width="360"
               />
-              <h2 class="titlethird">Cashless Payment</h2>
+              <h2 class="title-third">Cashless Payment</h2>
               <p class="list-text">Marketing</p>
             </a>
           </li>
@@ -109,7 +109,7 @@
                 alt="Meditation App"
                 width="360"
               />
-              <h2 class="titlethird">Meditation App</h2>
+              <h2 class="title-third">Meditation App</h2>
               <p class="list-text">App</p>
             </a>
           </li>
@@ -120,7 +120,7 @@
                 alt="Marketing"
                 width="360"
               />
-              <h2 class="titlethird">Taxi Service</h2>
+              <h2 class="title-third">Taxi Service</h2>
               <p class="list-text">Marketing</p>
             </a>
           </li>
@@ -131,7 +131,7 @@
                 alt="Screen Illustrations"
                 width="360"
               />
-              <h2 class="titlethird">Screen Illustrations</h2>
+              <h2 class="title-third">Screen Illustrations</h2>
               <p class="list-text">Design</p>
             </a>
           </li>
@@ -142,7 +142,7 @@
                 alt="Online Courses"
                 width="360"
               />
-              <h2 class="titlethird">Online Courses</h2>
+              <h2 class="title-third">Online Courses</h2>
               <p class="list-text">Marketing</p>
             </a>
           </li>
@@ -153,7 +153,7 @@
                 alt="Instagram Stories"
                 width="360"
               />
-              <h2 class="titlethird">Instagram Stories Concept</h2>
+              <h2 class="title-third">Instagram Stories Concept</h2>
               <p class="list-text">Design</p>
             </a>
           </li>
@@ -164,7 +164,7 @@
                 alt="Organic Food"
                 width="360"
               />
-              <h2 class="titlethird">Organic Food</h2>
+              <h2 class="title-third">Organic Food</h2>
               <p class="list-text">Web Site</p>
             </a>
           </li>
@@ -175,7 +175,7 @@
                 alt="Fresh Coffee"
                 width="360"
               />
-              <h2 class="titlethird">Fresh Coffee</h2>
+              <h2 class="title-third">Fresh Coffee</h2>
               <p class="list-text">Web Site</p>
             </a>
           </li>
